load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-lb-service
spec:
  type: NodePort
  selector:
    component: webserver
    release: airflow
  ports:
  - protocol: TCP
    port: 60000
    targetPort: 8080
