ingress.yaml
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  name: "webserver-outside"
  namespace: "airflow"
spec:
  defaultBackend:
    service:
      name: "airflow-webserver"
      port:
        number: 8080
status:
  loadBalancer: {}
